[package]
name = "arkheion_engine"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.18"
solana-sdk = "1.18"
# Kita matikan default features biar gak narik MySQL/Postgres yang bikin berat & error
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
